// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as an anchor tag 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0CD463;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #19E170;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C556;
  outline: none;
}

<a
  className="c0"
  href="#some-anchor"
  size="small"
>
  Primary Button (Anchor)
</a>
`;

exports[`Button renders as disabled 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0CD463;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #19E170;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C556;
  outline: none;
}

<button
  className="c0"
  disabled={true}
  size="small"
>
  Disabled Primary Button
</button>
`;

exports[`Button renders as fullWidth 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  width: 100%;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  position: relative;
  color: #FFFFFF;
  background-color: #0CD463;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #19E170;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C556;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Full Width Primary Button
</button>
`;

exports[`Button renders correctly 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0CD463;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #19E170;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C556;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Primary Button
</button>
`;

exports[`Button variants renders as default 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Default Button
</button>
`;

exports[`Button variants renders as highlight 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  opacity: 0.9;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  opacity: 0.8;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Secondary Button
</button>
`;

exports[`Button variants renders as primary 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0CD463;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #19E170;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C556;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Primary Button
</button>
`;

exports[`Button variants renders as secondary 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #242D38;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #11161D;
  outline: none;
}

<button
  className="c0"
  size="small"
>
  Secondary Button
</button>
`;

exports[`Button variants variants MockStates Default renders as active 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Default Button
</button>
`;

exports[`Button variants variants MockStates Default renders as active 2`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Default Button
</button>
`;

exports[`Button variants variants MockStates Default renders with hover 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Default Button
</button>
`;

exports[`Button variants variants MockStates Default renders with hover 2`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background: none;
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding: 0;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  color: #FFFFFF;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  color: #FFFFFF;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Default Button
</button>
`;

exports[`Button variants variants MockStates Highlight outline renders as active 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  opacity: 0.9;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  opacity: 0.8;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Primary Button
</button>
`;

exports[`Button variants variants MockStates Highlight renders as active 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  opacity: 0.9;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  opacity: 0.8;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Highlight Button
</button>
`;

exports[`Button variants variants MockStates Highlight renders with hover 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0F75BD;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  opacity: 0.9;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  opacity: 0.8;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Highlight Button
</button>
`;

exports[`Button variants variants MockStates Primary renders as active 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0CD463;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #19E170;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C556;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Primary Button
</button>
`;

exports[`Button variants variants MockStates Primary renders with hover 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #0CD463;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #19E170;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #02C556;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Primary Button
</button>
`;

exports[`Button variants variants MockStates Secondary renders as active 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #242D38;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #11161D;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Secondary Button
</button>
`;

exports[`Button variants variants MockStates Secondary renders as active 2`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #242D38;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #11161D;
  outline: none;
}

<button
  className="c0 is-active"
  size="small"
>
  Active Primary Button
</button>
`;

exports[`Button variants variants MockStates Secondary renders with hover 1`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #242D38;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #11161D;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Secondary Button
</button>
`;

exports[`Button variants variants MockStates Secondary renders with hover 2`] = `
.c0 {
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-auto-flow: column;
  min-height: 1.5rem;
  font-family: inherit;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: 1px solid;
  border-color: transparent;
  border-radius: 6.25rem;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
  color: #FFFFFF;
  background-color: #1A212A;
  font-size: 0.875rem;
  line-height: 1.25rem;
  height: 2.5rem;
  padding: 0 1.25rem;
}

.c0:disabled,
.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c0.is-hover:not([disabled]),
.c0:hover:not([disabled]) {
  background-color: #242D38;
}

.c0.is-active,
.c0.has-focus,
.c0:active,
.c0:focus {
  background-color: #11161D;
  outline: none;
}

<button
  className="c0 is-hover"
  size="small"
>
  Hover Primary Button
</button>
`;
